fix: Updated the ConfigurationFactory a tiny bit